fix gaps

--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ header .btn {
 .artistas {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 2rem;
+    gap: 5.5rem 2rem;
     padding-left: 10rem;
 }
 
@@ -326,7 +326,7 @@ header .btn {
 .patrocinadores-logos {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    gap: 3rem;
+    gap: 2rem 3rem;
 }
 
 /***** FOOTER *****/
